--- a/Common/OfficeOnline/DSOframer_MSOfficialSample/webtest.htm
+++ b/Common/OfficeOnline/DSOframer_MSOfficialSample/webtest.htm
@@ -177,8 +177,10 @@
       <td valign="top" bgcolor="#FFCC00" colspan="2"><img src="righttopcurve.gif" width="10" height="10"></td>
     </tr>
     <tr>
-      <td width="1" bgcolor="#D6D3D6"></td><td bgcolor="#FFCC00" width="9" height="9"></td>
-      <td bgcolor="#FFCC00" width="9" height="10"></td><td width="1" bgcolor="#D6D3D6"></td>
+      <td width="1" bgcolor="#D6D3D6"></td>
+      <td bgcolor="#FFCC00" width="9" height="9"></td>
+      <td bgcolor="#FFCC00" width="9" height="10"></td>
+      <td width="1" bgcolor="#D6D3D6"></td>
     </tr>
     <tr>
       <td width="1" bgcolor="#D6D3D6"></td>
