--- a/Common/OfficeOnline/DSOframer_MySample/webtest.htm
+++ b/Common/OfficeOnline/DSOframer_MySample/webtest.htm
@@ -37,7 +37,7 @@
         }
         #logo2 a img
         {
-        	border: none;
+            border: none;
         }
         #horizon
         {
@@ -47,69 +47,54 @@
         }
         #mainbody
         {
-        	height: 500px;
-        	background-color: #FFCCFF;
+            height: 500px;
         }
-
         #sidebar
         {
-        	width: 175px;
-        	height: 100%;
-        	margin: 0px 0px 0px 10px;
-        	background: #f1f1f1;
+            width: 175px;
+            height: 100%;
+            margin: 0px 0px 0px 10px;
+            background-color: #f1f1f1;
         }
-        #verticalLine1
-        {
-        	height: 480px;
-        	width: 5px;
-        	float: left;
-        	margin: auto;
-        	background-color: #D6D3D6;
-        }
-        #verticalLine2
-        {
-        	height: 100%;
-        	width: 5px;
-        	float: left;
-        	clear: right;
-        	background-color: #D6D3D6;
-        }
-        #sidebarContent
-        {
-        	height: 100%;
-        	width: 165px;
-        	float: left;
-        	background-color: #FFFF99;
-        }
-
         #sidebartitle1
         {
-        	height: 20px;
-        	background: #FFCC00;
-        }        
-        #upperLeftCorner 
+            height: 20px;
+            width: 175px;
+            background-color: #FFCC00;
+        }
+        #upperLeftCorner
         {
-        	height: 10px;
-        	width: 10px;
-        	float: left;
+            height: 10px;
+            width: 10px;
+            float: left;
         }
         #sidebartext1
         {
-        	height: 20px;
-        	width: 155px;
-        	float: left;
-        	line-height: 20px;
-        	text-align: left;
-        }  
-        #upperRightCorner 
-        {
-        	height: 10px;
-        	width: 10px;
-        	background: #FFCC00;
-        	float: left;
-        	clear: right;
+            height: 10px;
+            width: 155px;
+            float: left;
+            line-height: 20px;
+            text-align: left;
         }
-        </style>
+        #upperRightCorner
+        {
+            height: 10px;
+            width: 10px;
+            background-color: #FFCC00;
+            float: left;
+            clear: right;
+        }
+        #verticalLine1
+        {
+            width: 173px;
+            height: 10px;
+            border-style: none solid none solid;
+            border-color: #D6D3D6;
+            border-width: 1px;
+            float: left;
+            clear: right;
+        }
+    </style>
 </head>
 <body>
     <div id="container">
@@ -126,21 +111,18 @@
         </div>
         <div id="mainbody">
             <div id="sidebar">
-            	<div id="verticalLine1"></div>
-            	<div id="sidebarContent">
-            	</div>
-            	<div id="verticalLine2"></div>
-
-            	<!--
-
-            	<div id="sidebartitle1">
-	            	<div id="upperLeftCorner"><img src="lefttopcurve.gif" /></div>
-	            	<div id="sidebartext1"><B>Load a Document</B></div>
-	            	<div id="upperRightCorner"><img src="righttopcurve.gif" /></div>
-            	</div>
-
-            	-->
-
+                <div id="sidebartitle1">
+                    <div id="upperLeftCorner">
+                        <img src="lefttopcurve.gif" /></div>
+                    <div id="sidebartext1">
+                        <b>Load a Document</b></div>
+                    <div id="upperRightCorner">
+                        <img src="righttopcurve.gif" /></div>
+                    <div id="verticalLine1">
+                    </div>
+                    <div id="verticalLine2">
+                    </div>
+                </div>
             </div>
             <div id="doccontrol">
             </div>
