--- a/Common/OfficeOnline/Demo_DSOframer/webtest2.htm
+++ b/Common/OfficeOnline/Demo_DSOframer/webtest2.htm
@@ -1,5 +1,7 @@
-﻿<html>
+﻿<!DOCTYPE>
+<html>
 <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
     <title>DsoFramer Control Test Page (KB311765)</title>
     <script src="script.js" type="text/javascript"></script>
     <link href="style.css" rel="stylesheet" type="text/css" />
@@ -72,9 +74,7 @@
                 </div>
                 <div id="sidebarFooter">
                     <img src="bottomcurve.gif" />
-                </div>
-                <p>Click on the document icon on the titlebar to show the file menu, or use the commands
-                    above to perform an action.</p>
+                </div>                             
             </div>
             <div id="docControl">
                 <object classid="clsid:00460182-9E5E-11d5-B7C8-B8269041DD57" id="oframe" width="100%"
