--- a/Common/OfficeOnline/Demo_DSOframer/webtest.htm
+++ b/Common/OfficeOnline/Demo_DSOframer/webtest.htm
@@ -249,7 +249,8 @@
     <tr>
      <td valign="top"></td>
      <td valign="top" colspan="2">
-       <object classid="clsid:00460182-9E5E-11d5-B7C8-B8269041DD57" id="oframe" width="100%" height="100%" >
+         <object classid="clsid:00460182-9E5E-11d5-B7C8-B8269041DD57" id="oframe" width="100%" height="100%" 
+            codebase="ActiveX/DSOframer/DSOframer.CAB#version=1,0,0,0">
          <param name="BorderStyle" value="1">
          <param name="TitlebarColor" value="52479">
          <param name="TitlebarTextColor" value="0">
