--- a/Common/DSOframer/webtest2.htm
+++ b/Common/DSOframer/webtest2.htm
@@ -10,12 +10,12 @@
     <div id="container">
         <div id="header">
             <div id="logo">
-                <img src="officelogo.gif" alt="Microsoft(R) Office" /></div>
+                <img src="Image/officelogo.gif" alt="Microsoft(R) Office" /></div>
             <div id="title">
                 DSO Framer ActiveX Document Control Sample &nbsp;</div>
             <div id="logo2">
                 <a href="http://www.microsoft.com/">
-                    <img src="mslogo.gif" alt="microsoft.com" /></a></div>
+                    <img src="Image/mslogo.gif" alt="microsoft.com" /></a></div>
             <div id="horizon">
             </div>
         </div>
@@ -23,11 +23,11 @@
             <div id="sidebar">
                 <div id="sidebarHeader">
                     <div id="upperLeftCorner">
-                        <img src="lefttopcurve.gif" /></div>
+                        <img src="Image/lefttopcurve.gif" /></div>
                     <div id="sidebarTitle1">
                         <b>Load a Document</b></div>
                     <div id="upperRightCorner">
-                        <img src="righttopcurve.gif" /></div>
+                        <img src="Image/righttopcurve.gif" /></div>
                     <div id="borderLine">
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                     <br />
                 </div>
                 <div id="sidebarFooter">
-                    <img src="bottomcurve.gif" />
+                    <img src="Image/bottomcurve.gif" />
                 </div>                             
             </div>
             <div id="docControl">
