--- a/Common/DSOframer/webtest.htm
+++ b/Common/DSOframer/webtest.htm
@@ -148,10 +148,10 @@
 
 <table width="100%" cellpadding="0" cellspacing="0" border="0" bgcolor="#FFCC00">
  <tr>
-    <td bgcolor="#FFCC00" valign="top" width="250" rowspan="2"><img src="officelogo.gif" alt="Microsoft(R) Office" border="0" /></td>
+    <td bgcolor="#FFCC00" valign="top" width="250" rowspan="2"><img src="Image/officelogo.gif" alt="Microsoft(R) Office" border="0" /></td>
     <td bgcolor="#FFCC00" valign="middle" height="20" align="right" class="fontSize1" nowrap="true">DSO Framer ActiveX Document Control Sample &nbsp;</td>
  </tr>
- <tr><td bgcolor="#FFCC00" valign="top" height="40" align="right"><a href="http://www.microsoft.com/"><img src="mslogo.gif" border="0" alt="microsoft.com"></a></td></tr>
+ <tr><td bgcolor="#FFCC00" valign="top" height="40" align="right"><a href="http://www.microsoft.com/"><img src="Image/mslogo.gif" border="0" alt="microsoft.com"></a></td></tr>
  <tr><td bgcolor="#FFFFFF" valign="top" height="2"></td><td bgcolor="#FFFFFF" valign="top" height="2"></td></tr>
  <tr><td bgcolor="#FFCC00" valign="top" height="2"></td><td bgcolor="#FFCC00" valign="top" height="2"></td></tr>
  <tr><td bgcolor="#FFFFFF" valign="top" height="5"></td><td bgcolor="#FFFFFF" valign="top" height="5"></td></tr>
@@ -172,9 +172,9 @@
 
    <!-- Load a Document -->
     <tr>
-      <td valign="top" bgcolor="#FFCC00" colspan="2"><img src="lefttopcurve.gif" width="10" height="10"></td>
+      <td valign="top" bgcolor="#FFCC00" colspan="2"><img src="Image/lefttopcurve.gif" width="10" height="10"></td>
       <td valign="middle" bgcolor="#FFCC00" class="fontSize1" width="155" rowspan="2"><B>Load a Document</B></td>
-      <td valign="top" bgcolor="#FFCC00" colspan="2"><img src="righttopcurve.gif" width="10" height="10"></td>
+      <td valign="top" bgcolor="#FFCC00" colspan="2"><img src="Image/righttopcurve.gif" width="10" height="10"></td>
     </tr>
     <tr>
       <td width="1" bgcolor="#D6D3D6"></td>
@@ -232,7 +232,7 @@
     </tr>
 
 
-    <tr><td colspan="5"><img src="bottomcurve.gif" width="175" height="10"></td></tr>
+    <tr><td colspan="5"><img src="Image/bottomcurve.gif" width="175" height="10"></td></tr>
   </table>
 
   <p class="fontSize1"><span id="tstat">Click on the document icon on the titlebar to show the file menu, or use the commands above to perform an action.</span>
