--- a/DSOframer/CommonDemo.html
+++ b/DSOframer/CommonDemo.html
@@ -4,10 +4,19 @@
     <title></title>
     <script src="script.js" type="text/javascript"></script>
     <style type="text/css">
-        input[type="button"], input[type="text"], label, select {
-            width: 118px;
-            font-size: 12px;
+        input, label, select {
+            margin: 1px;
         }
+
+            input[type="button"], label, select {
+                width: 118px;
+                font-size: 12px;
+            }
+
+            input[type="text"] {
+                width: 114px;
+                font-size: 12px;
+            }
     </style>
 </head>
 <body onload="InitEvent()">
@@ -15,6 +24,12 @@
         <table width="100%">
             <tr>
                 <td width="120px" style="vertical-align: top;">
+                    <label>
+                        菜单操作
+                    </label>
+                    <input type="button" value="显示标题栏" onclick="ToggleTitlebar()" />
+                    <input type="button" value="显示菜单栏" onclick="ToggleMenubar()" />
+                    <input type="button" value="显示工具栏" onclick="ToggleToolbars()" />
                     <label>
                         基本操作
                     </label>
@@ -26,21 +41,25 @@
                     <input type="button" value="文档属性" onclick="OpenProperty()" />
                     <input type="button" value="关闭文档" onclick="CloseDoc()" />
                     <label>
-                        菜单操作
+                        Excel相关
                     </label>
-                    <input type="button" value="显示标题栏" onclick="ToggleTitlebar()" />
-                    <input type="button" value="显示菜单栏" onclick="ToggleMenubar()" />
-                    <input type="button" value="显示工具栏" onclick="ToggleToolbars()" />
+                    <input type="button" value="新建Excel" onclick="AddNewExcel()" />
+                    <label>
+                        PPT相关
+                    </label>
+                    <input type="button" value="新建PPT" onclick="AddNewPPT()" />
                 </td>
                 <td width="120px" style="vertical-align: top;">
                     <label>
                         Word相关
                     </label>
                     <input type="button" value="新建Word" onclick="AddNewWord()" />
-                    <input type="button" value="是否保留痕迹" onclick="ToggleTrackRevisions()" />
-                    <input type="button" value="是否显示痕迹" onclick="ToggleShowRevisions()" />
-                    <input type="button" value="接受所有修订" onclick="AcceptAllRevisions()" />
-                    <input type="button" value="拒绝所有修订" onclick="RejectAllChangesInDoc()" />
+                    <input type="button" value="保留痕迹" onclick="ToggleTrackRevisions(true)" />
+                    <input type="button" value="取消痕迹" onclick="ToggleTrackRevisions(false)" />
+                    <input type="button" value="显示痕迹" onclick="ToggleShowRevisions(true)" />
+                    <input type="button" value="隐藏痕迹" onclick="ToggleShowRevisions(false)" />
+                    <input type="button" value="接受修订" onclick="ToggleAllRevisions(true)" />
+                    <input type="button" value="拒绝修订" onclick="ToggleAllRevisions(false)" />
                     <input type="button" value="设置当前用户" onclick="SetUserName()" />
                     <input type="text" id="tUserName" value="stone" />
                     <input type="button" value="格式加锁" onclick="ProtectDoc(2)" />
@@ -59,6 +78,12 @@
                         <option value="2">页宽显示</option>
                         <option value="3">内容居中</option>
                     </select>
+                    <input type="button" value="动态套红" onclick="AddDocHeader('测试模板标题')"/>
+                    <input type="button" value="插入图片" onclick="InsertPicture()" />
+                    <input type="button" value="显示功能区" onclick="ToggleRibbonBar()" />
+                    <input type="button" value="无格式粘贴" onclick="CopyWithoutFormat()"/>
+                    <input type="button" value="获取书签数量" onclick="GetBookmarksCount()"/>
+                    <input type="button" value="遍历书签内容" onclick="GetBookmarksCount()" />
                 </td>
                 <td>
                     <object classid="clsid:00460182-9E5E-11d5-B7C8-B8269041DD57" id="oframe" width="100%"
